# Nori

./: .gitignore  CMakeLists.txt  chitest.m
.VSCodeCounter/2022-12-26_16-20-46/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-12-29_19-07-47/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-12-29_19-10-31/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-12-29_19-11-08/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-12-29_19-12-01/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: cmake.yml
CS6630 Realistic Image Synthesis/notes/: Monte Carlo Integration Example.html
PDF/CS6630 Realistic Image Synthesis/notes/: Autodiff.ipynb
ext/: CMakeLists.txt  README.md
ext/eigen/: .gitignore
ext/filesystem/filesystem/: path.h
ext/nanogui/: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MANIFEST.in  README.rst  pyproject.toml  setup.py
ext/nanogui/.github/: dependabot.yml
ext/nanogui/docs/: compilation.rst  conf.py  examples.rst  index.rst
ext/nanogui/nanogui/: __init__.py
ext/nanogui/resources/: fa-import.py  imageview_fragment.gl  imageview_fragment.gles  imageview_fragment.metal  imageview_vertex.gl  imageview_vertex.gles  imageview_vertex.metal  nanoguiConfig.cmake.in
ext/nanogui/src/: autorelease.mm  button.cpp  canvas.cpp  checkbox.cpp  colorpicker.cpp  colorwheel.cpp  combobox.cpp  common.cpp  darwin.mm  example1.cpp  example3.cpp  example4.cpp  example_icons.cpp  graph.cpp  imagepanel.cpp  imageview.cpp  label.cpp  layout.cpp  messagedialog.cpp  opengl.cpp  opengl_check.h  popup.cpp  popupbutton.cpp  progressbar.cpp  renderpass_gl.cpp  renderpass_metal.mm  screen.cpp  shader.cpp  shader_gl.cpp  shader_metal.mm  slider.cpp  tabwidget.cpp  textarea.cpp  textbox.cpp  texture.cpp  texture_gl.cpp  texture_metal.mm  theme.cpp  traits.cpp  vscrollpanel.cpp  (+2 more)
ext/openexr/: .gitignore  .gitmodules  CMakeLists.txt  README
ext/openexr/IlmBase/: .gitignore  CMakeLists.txt  IlmBase.pc.in  Makefile.am  README.cmake.txt  bootstrap  configure.ac
ext/openexr/OpenEXR/: .gitignore  CMakeLists.txt  Makefile.am  OpenEXR.pc.in  README.cmake.txt  bootstrap  configure.ac
ext/openexr/OpenEXR_Viewers/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  OpenEXR_Viewers.pc.in  README  README.CVS  README.OSX  bootstrap  configure.ac
ext/openexr/PyIlmBase/: AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  Makefile.am  NEWS  PyIlmBase.pc.in  README  README.OSX  bootstrap  configure.ac  pyilmbase.m4
ext/plugin/: io_nori.py  readme.md
ext/pugixml/: .travis.yml  Jamfile.jam  Jamrules.jam  README.md
ext/pugixml/docs/: manual.html  manual.qbk  quickstart.html  quickstart.qbk
ext/pugixml/scripts/: CMakeLists.txt
ext/pugixml/src/: pugiconfig.hpp  pugixml.cpp  pugixml.hpp
ext/tbb/: CMakeLists.txt
ext/tinyformat/: .gitignore  README.rst  tinyformat.h
ext/zlib/: .gitignore  CMakeLists.txt
include/nori/: accel.h  bbox.h  bbugbox.h  bitmap.h  block.h  bsdf.h  bsphere.h  bstructure.h  bvh.h  camera.h  color.h  common.h  complexior.h  distribution.h  dpdf.h  emitter.h  frame.h  gui.h  integrator.h  kdtree.h  medium.h  mesh.h  object.h  optionsparser.h  parser.h  phase.h  photon.h  proplist.h  ray.h  render.h  rfilter.h  sample.h  sampler.h  scene.h  texture.h  timer.h  transform.h  vector.h  warp.h
scenes/pa1/: bunny.exr  bunny.xml
scenes/pa2/: ajax-normals.exr  ajax-normals.xml
scenes/pa3/: ajax-ao.exr  ajax-ao.xml  ajax-simple.exr  ajax-simple.xml
scenes_old/pa1/: ajax-av.exr  sponza-av.exr  sponza-direct.exr
src/: accel.cpp  ao.cpp  area.cpp  arealight.cpp  av.cpp  bitmap.cpp  block.cpp  bvh.cpp  chi2test.cpp  common.cpp  dielectric.cpp  diffuse.cpp  direct.cpp  direct_ems.cpp  direct_mats.cpp  direct_mis.cpp  disklight.cpp  distributions.cpp  hdrToLdr.cpp  independent.cpp  main.cpp  mesh.cpp  microfacet.cpp  mirror.cpp  normals.cpp  nprbsdf.cpp  nprintegrator.cpp  obj.cpp  object.cpp  parser.cpp  path_ems.cpp  path_mats.cpp  path_mis.cpp  pathintegrator.cpp  perspective.cpp  photon.cpp  photonmapper.cpp  pointlight.cpp  proplist.cpp  render.cpp  (+12 more)
src/bsdf/: dielectric.cpp  diffuse.cpp  microfacet.cpp  mirror.cpp  nprbsdf.cpp  roughconductor.cpp  roughdielectric.cpp  smoothconductor.cpp
src/emitter/: arealight.cpp  disklight.cpp  environmentlight.cpp  pointlight.cpp
src/integrators/: path_mis.cpp
(+723 files in other folders)
